# PuppyGit

./: .gitignore  CHANGELOG.md  PrivacyPolicy.md  PrivacyPolicy.txt  README.md  TODO.md  build.gradle.kts  donate.md  settings.gradle.kts
app/: .gitignore  CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/schemas/com.catpuppyapp.puppygit.data.AppDatabase/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  23.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
app/src/androidTest/java/com/catpuppyapp/puppygit/: ExampleInstrumentedTest.kt  TestFunctional.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/catpuppyapp/puppygit/compose/: AcceptButtons.kt  ApplyPatchDialog.kt  AskGitUsernameAndEmailDialog.kt  AskGitUsernameAndEmailDialogWithSelection.kt  BottomBar.kt  BottomSheet.kt  BranchItem.kt  CardButton.kt  ChangeListItem.kt  CheckoutDialog.kt  CommitItem.kt  ConfirmDialog.kt  ConfirmDialog2.kt  CopyableDialog.kt  CreateBranchDialog.kt  CreateFileOrFolderDialog.kt  CreateRemoteDialog.kt  CreateTagDialog.kt  CredentialItem.kt  CredentialSelector.kt  DiffCommitsDialog.kt  DiffContent.kt  DiffDeletedContent.kt  DiffNewContent.kt  DiffRow.kt  DomainCredItem.kt  ErrRepoCard.kt  ErrorItem.kt  FileListItem.kt  FilesBottomBar.kt  FilterTextField.kt  FontSizeAdjuster.kt  FooterPager.kt  GoToTopAndGoToBottomFab.kt  LinkOrUnLinkCredentialAndRemoteDialog.kt  LoadeMore.kt  LoadingDialog.kt  LoadingText.kt  LongPressAbleIconBtn.kt  MyCheckBox.kt  (+29 more)
app/src/main/java/com/catpuppyapp/puppygit/constants/: Cons.kt  LangCode.kt  LineNum.kt  PageRequest.kt  SpecialCredential.kt  StorageDirCons.kt
app/src/main/java/com/catpuppyapp/puppygit/etc/: Ret.kt  (+2 more)
app/src/main/jni/include/: common.h  test_stu.h
app/src/main/jni/src/: libgit_two.c  test.c
app/src/main/res/drawable/: branch.xml  outline_nutrition_24.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml
app/src/test/java/com/catpuppyapp/puppygit/: ExampleUnitTest.kt
(+217 files in other folders)
